# netscanner

./: .gitignore  README.md  generate_expected.sh  main.py  pyproject.toml  resume.sh  scan.sh
data/: ring_devices.txt  sonos_system.txt
enrich/: initialize_type_model_attributes.py  update_appletv_devices.py  update_arlo_devices.py  update_cylerasensor_devices.py  update_echo_devices.py  update_eero_devices.py  update_floorheater_devices.py  update_garagedoor_devices.py  update_kitchenlight_devices.py  update_lxc_devices.py  update_networking_devices.py  update_pc_devices.py  update_pictureframe_devices.py  update_printer_devices.py  update_reolink_devices.py  update_ring_devices.py  update_roomba_devices.py  update_samsungtv_devices.py  update_smartfridge_devices.py  update_smartplug_devices.py  update_sonos_devices.py  update_thermostat_devices.py
netscanner/: cli.py  devices.py  leases.py  pfsense_config.py  ssh.py
