[project]
name = "netscanner"
version = "0.1.0"
description = "Enumerate devices with current DHCP leases across pfSense networks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paramiko>=5.0.0",
]

[project.scripts]
netscanner = "netscanner.cli:main"
update-ring-devices = "enrich.update_ring_devices:main"
update-sonos-devices = "enrich.update_sonos_devices:main"
update-eero-devices = "enrich.update_eero_devices:main"
initialize-type-model-attributes = "enrich.initialize_type_model_attributes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netscanner", "enrich"]
