[project]
name = "netscanner"
version = "0.1.0"
description = "Enumerate devices with current DHCP leases across pfSense networks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "paramiko>=5.0.0",
]

[project.scripts]
netscanner = "netscanner.cli:main"
update-ring-devices = "enrich.update_ring_devices:main"
update-sonos-devices = "enrich.update_sonos_devices:main"
update-eero-devices = "enrich.update_eero_devices:main"
update-printer-devices = "enrich.update_printer_devices:main"
update-floorheater-devices = "enrich.update_floorheater_devices:main"
update-pc-devices = "enrich.update_pc_devices:main"
update-appletv-devices = "enrich.update_appletv_devices:main"
update-pictureframe-devices = "enrich.update_pictureframe_devices:main"
update-garagedoor-devices = "enrich.update_garagedoor_devices:main"
update-arlo-devices = "enrich.update_arlo_devices:main"
update-echo-devices = "enrich.update_echo_devices:main"
update-networking-devices = "enrich.update_networking_devices:main"
update-smartplug-devices = "enrich.update_smartplug_devices:main"
update-roomba-devices = "enrich.update_roomba_devices:main"
update-lxc-devices = "enrich.update_lxc_devices:main"
update-reolink-devices = "enrich.update_reolink_devices:main"
update-smartfridge-devices = "enrich.update_smartfridge_devices:main"
update-thermostat-devices = "enrich.update_thermostat_devices:main"
update-cylerasensor-devices = "enrich.update_cylerasensor_devices:main"
update-samsungtv-devices = "enrich.update_samsungtv_devices:main"
initialize-type-model-attributes = "enrich.initialize_type_model_attributes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netscanner", "enrich"]
